@@ -12,12 +12,12 @@ Utilities for Message::* Perl modules.
 package Message::Util;
 use strict;
 use vars qw(%REG $VERSION);
-$VERSION=do{my @r=(q$Revision: 1.1 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+$VERSION=do{my @r=(q$Revision: 1.2 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 $REG{WSP} = qr/[\x09\x20]/;
 $REG{FWS} = qr/[\x09\x20]*/;
 
-sub encode_header_string {
+sub encode_header_string ($$;%) {
   require Message::MIME::Charset;
   my $self = shift; my $s = shift; my %o = @_;
   $o{charset} ||= $self->{option}->{encoding_after_encode};
@@ -32,7 +32,7 @@ sub encode_header_string {
   }
 }
 
-sub decode_header_string {
+sub decode_header_string ($$;%) {
   require Message::MIME::EncodedWord;
   require Message::MIME::Charset;
   my $self = shift; my $s = shift; my %o = @_;
@@ -95,7 +95,7 @@ Boston, MA 02111-1307, USA.
 =head1 CHANGE
 
 See F<ChangeLog>.
-$Date: 2002/03/25 10:18:35 $
+$Date: 2002/03/31 13:12:41 $
 
 =cut
 
