@@ -1,3 +1,7 @@
+2002-03-31  wakaba <w@suika.fam.cx>
+
+	* Header.pm: Support Message::Field::URI.
+
 2002-03-27  wakaba <w@suika.fam.cx>
 
 	* Fix bug of treatment of FWS sorounding encoded-word.
